Moved some stuff around

--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AlexWilsonInfo</title>
     <link rel="stylesheet" href="/css/index.css">
-    <script src="/js/index.js"></script>/>
+    <script src="/js/index.js"></script>
   </head>
   <body>
-    <h1> Welcome to Alex's Page!</h1>
+    <h1>Alex's Site</h1>
+    <ul>
+      <li> <a href="/aboutme">About Me</a></li>
+      <li> <a href="https://www.github.com/AlexWilson">GitHub</a></li>
+      <li> <a href="https://www.linkedin.com/in/alex-wilson-3021a5257">LinkedIn</a></li>
+    </ul>
   </body>
 </html>
