added online privacy tool list MVP

--- a/public/index.html
+++ b/public/index.html
@@ -4,15 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AlexWilsonInfo</title>
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/style.css">
     <script src="/js/index.js"></script>
   </head>
-  <body>
+  <>
     <h1>Alex's Site</h1>
-    <ul>
+    <ul id="social-links">
       <li> <a href="/aboutme">About Me</a></li>
-      <li> <a href="https://www.github.com/AlexWilson">GitHub</a></li>
+      <li> <a href="https://www.github.com/Alex-Wilson">GitHub</a></li>
       <li> <a href="https://www.linkedin.com/in/alex-wilson-3021a5257">LinkedIn</a></li>
+    </ul>
+
+    <ul id="online-privacy-tools">
+      <li><a href="">Firefox Browser</a></li>
+      <li><a href="">Mozilla VPN</a></li>
+      <li><a href="">Duck Duck Go</a></li>
+      <li><a href="">KeypassXC</a></li>
+
+    </ul>
+
+    <ul id="cryto-addresses">
+      <div>BTC: bc1qawuzvcv5qpkduzuxy4v9zl82s4amlw2aseqtm2</div>
+      <div>XMR: 85zBfGyP5hc51kHAG8fCN9Egxdd5S6YMa8CWhYHDcfkXcRjcJdgbmJNCFuaFyoTE9JaJPV5b34iyM4ryFSjTDRWWNJGyoaJ</div>
+      <div>FIL: f410f2fjjjxm7rch3edh7dz3xy7qpa4ia2tf4ubusmli</div>
     </ul>
   </body>
 </html>
