Added a list of software that I enjoy using !

--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,18 @@
     <link rel="stylesheet" href="/css/style.css">
     <script src="/js/index.js"></script>
   </head>
-  <>
+  <body>
     <h1>Alex's Site</h1>
     <ul id="social-links">
       <li> <a href="/aboutme">About Me</a></li>
       <li> <a href="https://www.github.com/Alex-Wilson">GitHub</a></li>
       <li> <a href="https://www.linkedin.com/in/alex-wilson-3021a5257">LinkedIn</a></li>
+    </ul>
+
+    <ul id="content-list">
+      <li> <a href="/software">Software</a></li>
+      <li> <a href="#">Video Games </a></li>
+      <li> <a href="#">Mods</a></li>
     </ul>
 
     <ul id="online-privacy-tools">
