--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 
     <ul id="content-list">
       <li> <a href="/software">Software</a></li>
-      <li> <a href="#">Video Games </a></li>
+      <li> <a href="/games">Video Games </a></li>
       <li> <a href="#">Mods</a></li>
     </ul>
 
