Added a projects page

--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,9 @@
     </ul>
 
     <ul id="content-list">
-      <li> <a href="/software">Software</a></li>
+      <li> <a href="/software">General Software</a></li>
       <li> <a href="/games">Video Games </a></li>
-      <li> <a href="#">Mods</a></li>
+      <li> <a href="/projects"></a>Projects</li>
     </ul>
 
     <ul id="online-privacy-tools">
