added nav bar html elements

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,22 @@
     <script src="/js/index.js"></script>
   </head>
   <body>
+    <header>
+      <nav>
+        <ul class="navbar_links">
+          <li><a href="/aboutme">About Me</a></li>
+          <li><a href="https://www.github.com/Alex-Wilson">GitHub</a></li>
+          <li><a href="https://www.linkedin.com/in/alex-wilson-3021a5257">LinkedIn</a></li>
+
+        </ul>
+      </nav>
+    </header>
+
+
+
+
+
+
     <h1>Alex's Site</h1>
     <ul id="social-links">
       <li> <a href="/aboutme">About Me</a></li>
@@ -19,14 +35,6 @@
       <li> <a href="/software">General Software</a></li>
       <li> <a href="/games">Video Games </a></li>
       <li> <a href="/projects"></a>Projects</li>
-    </ul>
-
-    <ul id="online-privacy-tools">
-      <li><a href="">Firefox Browser</a></li>
-      <li><a href="">Mozilla VPN</a></li>
-      <li><a href="">Duck Duck Go</a></li>
-      <li><a href="">KeypassXC</a></li>
-
     </ul>
 
     <ul id="cryto-addresses">
