Still working on the nav

--- a/public/index.html
+++ b/public/index.html
@@ -9,33 +9,24 @@
   </head>
   <body>
     <header>
+      <img class="logo" src="images/frog_logo.svg" alt="Personal Logo, ribbit">
       <nav>
         <ul class="navbar_links">
           <li><a href="/aboutme">About Me</a></li>
           <li><a href="https://www.github.com/Alex-Wilson">GitHub</a></li>
-          <li><a href="https://www.linkedin.com/in/alex-wilson-3021a5257">LinkedIn</a></li>
-
+          <li><a href="/projects">Projects</a></li>
+          <li><a href="/software">Software</a></li>
+          <li><a href="/resources">Resources</a></li>
+          <li><a href="/media">Media</a></li>
+          
+          <!--- 
+            <li><a href="https://www.linkedin.com/in/alex-wilson-3021a5257">LinkedIn</a></li>
+          --->
         </ul>
       </nav>
+      <a class="cta" href="#"><button>Contact Me</button></a>
     </header>
 
-
-
-
-
-
-    <h1>Alex's Site</h1>
-    <ul id="social-links">
-      <li> <a href="/aboutme">About Me</a></li>
-      <li> <a href="https://www.github.com/Alex-Wilson">GitHub</a></li>
-      <li> <a href="https://www.linkedin.com/in/alex-wilson-3021a5257">LinkedIn</a></li>
-    </ul>
-
-    <ul id="content-list">
-      <li> <a href="/software">General Software</a></li>
-      <li> <a href="/games">Video Games </a></li>
-      <li> <a href="/projects"></a>Projects</li>
-    </ul>
 
     <ul id="cryto-addresses">
       <div>BTC: bc1qawuzvcv5qpkduzuxy4v9zl82s4amlw2aseqtm2</div>
