--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,14 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AlexWilsonInfo</title>
+    <title>Alex Wilson's Site</title>
     <link rel="stylesheet" href="/css/style.css">
-    <script src="/js/index.js"></script>
   </head>
   <body>
     <header>
       <img class="logo" src="images/frog_logo.svg" alt="Personal Logo, ribbit">
       <nav>
-        <ul class="navbar_links">
+        <ul class="nav_links">
           <li><a href="/aboutme">About Me</a></li>
           <li><a href="https://www.github.com/Alex-Wilson">GitHub</a></li>
           <li><a href="/projects">Projects</a></li>
