--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alex Wilson's Site</title>
+    <title>Alex Wilson's Own Site</title>
+    <meta name="description" content="">
     <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
@@ -25,12 +27,5 @@
       </nav>
       <a class="cta" href="#"><button>Contact Me</button></a>
     </header>
-
-
-    <ul id="cryto-addresses">
-      <div>BTC: bc1qawuzvcv5qpkduzuxy4v9zl82s4amlw2aseqtm2</div>
-      <div>XMR: 85zBfGyP5hc51kHAG8fCN9Egxdd5S6YMa8CWhYHDcfkXcRjcJdgbmJNCFuaFyoTE9JaJPV5b34iyM4ryFSjTDRWWNJGyoaJ</div>
-      <div>FIL: f410f2fjjjxm7rch3edh7dz3xy7qpa4ia2tf4ubusmli</div>
-    </ul>
   </body>
 </html>
