Finished link lists, added style guide file

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header>
-      <img class="logo" src="images/frog_logo.svg" alt="Personal Logo, ribbit">
+      <a href="/"><img class="logo" src="images/frog_logo.svg" alt="Personal Logo, ribbit"></a>
       <nav>
         <ul class="nav_links">
           <li><a href="/aboutme">About Me</a></li>
@@ -27,5 +27,7 @@
       </nav>
       <a class="cta" href="#"><button>Contact Me</button></a>
     </header>
+    <h1> Welcome to my website!</h1>
+    <p> This is a website that I use to share things I enjoy, exemplify my technical abilities, and establish myself as a website owner.</p>
   </body>
 </html>
